// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField Component TextAreaField renders 1`] = `
<div>
  <div
    class="fieldGroup size-2"
  >
    <div
      class="container"
    >
      <textarea
        class="textarea"
        id="NAME"
        name="NAME"
      />
    </div>
  </div>
</div>
`;

exports[`TextAreaField Component TextAreaField renders handles changes 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <textarea
        class="textarea"
        data-testid="DATA-TEST-ID"
        id="NAME"
        name="NAME"
      />
    </div>
  </div>
</div>
`;

exports[`TextAreaField Component TextAreaField renders in readonly 1`] = `
<div>
  <div
    class="fieldGroup size-6"
  >
    <div
      class="container"
    >
      <textarea
        class="textarea readOnly"
        id="NAME"
        name="NAME"
        readonly=""
      >
        INPUT-VALUE
      </textarea>
    </div>
  </div>
</div>
`;

exports[`TextAreaField Component TextAreaField renders in readonly highlighted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <textarea
        class="textarea readOnly highlighted"
        id="NAME"
        name="NAME"
        placeholder="-"
        readonly=""
      />
    </div>
  </div>
</div>
`;

exports[`TextAreaField Component TextAreaField renders with error 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <textarea
        class="textarea error"
        id="NAME"
        name="NAME"
      >
        INPUT-VALUE
      </textarea>
    </div>
    <div
      class="message"
    >
      <div
        class="error field-error"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;
